# zhuomianshijie_android

./: README.md  settings.gradle.kts
app/: CMakeLists.txt  build.gradle.kts
app/src/androidTest/java/com/example/zhuomianshijie/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/example/zhuomianshijie/: MainActivity.kt
app/src/main/java/com/example/zhuomianshijie/controllers/: ApiSettingsController.kt  SttSettingsController.kt  TtsSettingsController.kt
app/src/main/java/com/example/zhuomianshijie/model/: ApiSetting.kt  SttSetting.kt  TtsSetting.kt
app/src/main/java/com/example/zhuomianshijie/utils/: ApiSettingsManager.kt  SttSettingsManager.kt  ToastUtils.kt  (+1 more)
app/src/main/res/drawable/: bg_spinner.xml  button_outline_blue.xml  button_outline_red.xml  ic_add.xml  ic_menu_api.xml  ic_menu_stt.xml  ic_menu_tts.xml  ic_menu_zhuomianshijie.xml  spinner_background.xml  spinner_background_gray.xml
app/src/main/res/layout/: app_bar_main.xml  content_main.xml  custom_toast_layout.xml  fragment_api.xml  fragment_home.xml  fragment_stt.xml  fragment_tts.xml  item_add_api_setting.xml  item_spinner_add.xml  item_spinner_dropdown.xml  item_spinner_stt_add.xml  item_spinner_tts_add.xml
app/src/main/res/menu/: activity_main_drawer.xml  main.xml
app/src/main/res/navigation/: mobile_navigation.xml
app/src/main/res/values/: arrays.xml  strings.xml  styles.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/zhuomianshijie/: ExampleUnitTest.kt
(+29 files in other folders)
